# antlr4-c-compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  build.sh  compile.sh  example.d  exec  readme.md
.github/workflows/: build.yml
cmake/: CompileOptions.cmake
cmake/antlr4/: ExternalAntlr4Cpp.cmake
src/: CMakeLists.txt
src/dlangparser/: CMakeLists.txt
src/dlangparser/dlangparser/: main.cpp
src/grammar/: CMakeLists.txt  DlangLexer.g4  DlangParser.g4
src/libdlang/: CMakeLists.txt
src/libdlang/libdlang/: ast.cpp  ast.hpp  codegen.hpp  dump_tokens.cpp  dump_tokens.hpp  options.cpp  options.hpp
src/libdlang/test/: lexer.cpp
